# POC_TESTING_INTEROP

./: .coverage  .gitignore  CHANGES_TIMELINE.md  CONTRIBUTING.md  FILE_IMPORT_README.md  FORMULAIRE_PATIENT_RESUME.md  README.md  alembic.ini  apply_all_migrations.py  apply_migration_006.py  apply_migration_008.py  apply_migration_009.py  check_db_content.py  check_demo_data.py  check_demo_mouvements.py  check_ej_6_detail.py  check_endpoint_contexts.py  check_logs.py  check_mfn_structures.py  check_session_ej.py  poc.db  pyproject.toml  requirements.txt  roundtrip_adt_messages.txt  roundtrip_fhir_bundles.json  test.db  test_api_structure.py  test_file_polling.py  test_inject.py  test_mandatory_segments.py  test_mfn_full_structure.py  test_validation_response.html  tmp_test.db
.github/: copilot-instructions.md
Doc/: DOCUMENTATION_LINKS.md  EMISSION_STRUCTURE.md  INDEX.md  REORGANISATION_SUMMARY.md  STANDARDS.md  VALIDATION_SEGMENTS_OBLIGATOIRES.md  conformite_zbe.md  correction_a31_emission.md  dossier_types.md  file_based_import.md  formulaire_patient_rgpd.md  timeline_responsibilities_implementation.md
adapters/: __init__.py  hl7_pam_fr.py
alembic/: env.py
app/: .gitignore  app.py  db.py  db_session_factory.py  form_config.py  form_helpers.py  models.py  models_context.py  models_endpoints.py  models_identifiers.py  models_scenarios.py  models_shared.py  models_structure.py  models_structure_fhir.py  models_transport.py  models_vocabulary.py  models_workflows.py  runners.py  state_transitions.py  vocabulary_addons.py  vocabulary_init.py
migrations/: 001_add_patient_birth_address_and_identity.sql  002_add_patient_phones_and_birth_family.sql  003_add_mouvement_type.sql  004_add_cancelled_movement_seq.sql  005_add_indexes.sql  006_add_endpoint_ej_link.sql  007_add_file_endpoint_columns.sql  008_add_namespace_ej_link.sql  009_add_pam_validation.sql  (+3 more)
(+1862 files in other folders)
