[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MedData_Bridge"
version = "0.0.1"
authors = [
  { name="Nicolas", email="author@example.com" },
]
description = "POC FastAPI pour tester l'interopérabilité FHIR et HL7v2"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/whatever/MedData_Bridge"
"Bug Tracker" = "https://github.com/whatever/MedData_Bridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Ignorer les scripts de test manuels à la racine
addopts = "--ignore=test_api_structure.py --ignore=test_endpoint_detail.py --ignore=test_file_polling.py --ignore=test_service_hierarchy.py --ignore=test_service_uf_link.py --ignore=test_template_render.py --ignore=tools/test_injection_complete.py"